# rope

./: .gitignore  CMakeLists.txt  LICENSE.txt  binary_file.cpp  binary_file.h  elf_object.cpp  elf_object.h  main.cpp
